<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/signIn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_margin="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/last_name"
        />

    <TextView
        android:id="@+id/callsFromProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calls_from_profile_activity"
        app:layout_constraintTop_toBottomOf="@id/last_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"

        />

    <TextView
        android:id="@+id/callsFromRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calls_from_register_activity"
        app:layout_constraintTop_toBottomOf="@id/callsFromProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/register_button"
        app:layout_constraintTop_toBottomOf="@id/callsFromRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/send"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/callsFromRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register"
        />

</androidx.constraintlayout.widget.ConstraintLayout>