<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        />

    <EditText
        android:id="@+id/first_name_register_edit_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_margin="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/last_name_register_edit_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_register_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/last_name"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/department_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_register_edit_text"
        android:layout_marginTop="16dp"
        android:hint="@string/department"
        android:inputType="text" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/department"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register"
        />

</androidx.constraintlayout.widget.ConstraintLayout>